# fedit2

./: .gitignore  ChangeLog  Makefile.am  NEWS  README  bootstrap  configure.ac  fedit2.pro  reconfig.sh
src/: Makefile.am  command.cpp  command.h  config_dialog.cpp  config_dialog.h  constraint_delegate.cpp  constraint_delegate.h  constraint_edit_dialog.cpp  constraint_edit_dialog.h  constraint_view.cpp  constraint_view.h  coordinate_delegate.cpp  coordinate_delegate.h  edit_canvas.cpp  edit_canvas.h  edit_data.cpp  edit_data.h  edit_dialog.cpp  edit_dialog.h  fedit2.rc  main.cpp  main_window.cpp  main_window.h  mouse_state.h  options.cpp  options.h  sample_view.cpp  sample_view.h  src.pro
tool/: Makefile.am  average_formation.cpp  formation_converter.cpp
tool/dttrainer/: Makefile.am  main.cpp  memo  trainer.cpp  trainer.h
xpm/: chase.xpm  delete.xpm  fedit2.xpm  hand.xpm  insert.xpm  record.xpm  replace.xpm  reverse.xpm  symmetry.xpm  train.xpm
