## Process this file with automake to produce Makefile.in

bin_PROGRAMS = average_formation

SUBDIRS = dttrainer

average_formation_SOURCES = \
	average_formation.cpp

average_formation_CPPFLAGS = -I$(top_srcdir)
average_formation_CXXFLAGS = -Wall -W
average_formation_LDFLAGS =
average_formation_LDADD =

AM_CPPFLAGS =
AM_CFLAGS = -Wall -W
AM_CXXFLAGS = -Wall -W
AM_LDFLAGS =


CLEANFILES = *~
