## Process this file with automake to produce Makefile.in

bin_PROGRAMS = average_formation formation_converter

#SUBDIRS = dttrainer

average_formation_SOURCES = \
	average_formation.cpp

formation_converter_SOURCES = \
	formation_converter.cpp

average_formation_CPPFLAGS = -I$(top_srcdir)
average_formation_CXXFLAGS = -Wall -W
average_formation_LDFLAGS =
average_formation_LDADD =

formation_converter_CPPFLAGS = -I$(top_srcdir)
formation_converter_CXXFLAGS = -Wall -W
formation_converter_LDFLAGS =
formation_converter_LDADD =


AM_CPPFLAGS =
AM_CFLAGS = -Wall -W
AM_CXXFLAGS = -Wall -W
AM_LDFLAGS =


CLEANFILES = *~
