## Process this file with automake to produce Makefile.in

bin_PROGRAMS = dttrainer

dttrainer_SOURCES = \
	trainer.cpp \
	main.cpp

noinst_HEADERS = \
	trainer.h

dttrainer_CPPFLAGS = -I$(top_srcdir)
dttrainer_CXXFLAGS = -Wall -W
dttrainer_LDFLAGS =
dttrainer_LDADD =

AM_CPPFLAGS =
AM_CFLAGS = -Wall -W
AM_CXXFLAGS = -Wall -W
AM_LDFLAGS =

CLEANFILES = *~
